--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Define title -->
-    <title>Carl Barks</title>
+    <title>Omar Darwish</title>
 
-    <!-- Include favicon. Use, e.g., https://favicon.io/ -->
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
+    <link rel="icon" type="image/jpg" href="omard.JPG" sizes="32x32" />
 
     <!-- Include style sheets -->
     <link rel="stylesheet" href="main.css" />
@@ -41,39 +40,33 @@
   <body>
     <section id="content">
       <!-- Avatar image -->
-      <img src="image.jpg" alt="Carl Barks" class="avatar" />
+      <img src="omard.JPG" alt="Omar Darwish" class="avatar" />
 
       <!-- Text -->
-      <h1>Hi, I'm Carl Barks!</h1>
+      <h1>Hi, my name is Omar Darwish</h1>
       <p>
-        I am a Ph.D. student in empirical barkology at Woof University.
+        I am a postdoctoral researcher in observational cosmology at University of Geneva.
       </p>
       <p>
-        Most of my current research is driven by trying to find an answer to the age-old question of “Who is a good boy?"
-      </p>
-      <p>
-        Please feel free to get in touch!
+        I mainly study projected maps of dark matter.
       </p>
 
       <!-- Icons -->
       <ul class="icons">
         <li>
-          <a href="" title="Institutional website"><i class="fas fa-university"></i></a>
+          <a href="https://cosmology.unige.ch/users/omar-darwish" title="Institutional website"><i class="fas fa-university"></i></a>
         </li>
         <li>
-          <a href="" title="E-Mail"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:o.darwish@pm.me" title="E-Mail"><i class="fas fa-envelope"></i></a>
         </li>
         <li>
-          <a href="" title="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Saladino93/" title="GitHub"><i class="fab fa-github"></i></a>
         </li>
         <li>
-          <a href="" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://inspirehep.net/authors/2000186" title="Inspire-HEP"><i class="ai ai-inspire"></i></a>
         </li>
         <li>
-          <a href="" title="NASA / ADS"><i class="ai ai-ads"></i></a>
-        </li>
-        <li>
-          <a href="" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+          <a href="https://scholar.google.com/citations?user=gyI7MOMAAAAJ&hl=it" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
         </li>
       </ul>
     </section>
