update hack page

--- a/hackathon_unige_2024.html
+++ b/hackathon_unige_2024.html
@@ -5,61 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swiss Cosmo Hackathon 2024</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600&display=swap');
+
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #1e3a8a; /* Blue background */
-            color: #ffffff;
+            font-family: 'Lexend', sans-serif;
+            background-color: #0d1b2a; /* Dark blue background */
+            color: #f4f4f9; /* Light cream for text */
             line-height: 1.6;
+            font-size: 1.2em;
         }
 
         header {
             text-align: center;
             padding: 20px;
+            background-color: #1b263b; /* Medium blue */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
         section {
-            max-width: 900px; /* Wider central column */
+            max-width: 900px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #2c5282; /* Slightly lighter blue */
+            background-color: #415a77; /* Soft blue-gray */
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         h1 {
             text-align: center;
-            color: #ffffff;
-            font-size: 2.5em; /* Larger title */
+            color: #e0e1dd; /* Off-white */
+            font-size: 2.8em;
         }
 
         h2 {
             text-align: center;
-            color: #ffffff;
-            font-size: 2em; /* Larger section titles */
+            color: #e0e1dd;
+            font-size: 2.2em;
         }
 
         p {
             margin: 10px 0;
+            color: #f4f4f9;
+        }
+
+        ul {
+            margin: 10px 0;
+            padding: 0;
+            list-style-type: square;
+            color: #f4f4f9;
+        }
+
+        li {
+            margin-left: 20px;
         }
 
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #1c3aa9;
+            background-color: #1b263b; /* Matches header */
+            color: #f4f4f9;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Swiss Cosmo Hackathon 2024</h1>
-        <p>Join us to explore the universe through data and innovation!</p>
+        <p>Bridging data, people, and coffee.</p>
     </header>
 
     <section>
         <h2>About</h2>
-
-        <p>The hackathon will bring people with different expertise to work on projects linked to observational cosmology.</p>
+        <p>In which ways can we use data from multiple cosmological surveys to improve our understanding of fundamental physics?</p>
+        <p>Are there new observables we are missing?</p>
+        <p>Which techniques or ideas are you most excited about?</p>
+        <br>
+        <p>This hackathon will bring people with different expertise to work on projects linked to observational cosmology.</p>
         <br>
         <p><strong>Time:</strong> 14:15 - 19:00</p>
         <p><strong>Date:</strong> Friday, 6th of December 2024</p>
@@ -67,50 +88,27 @@
     </section>
 
     <section>
-        <h2>Goals</h2>
-        <p>Our primary goals include:</p>
+        <h2>Format</h2>
+        <p>We will be split in teams:</p>
         <ul>
-            <li>Encouraging collaboration among enthusiasts and experts in cosmology.</li>
-            <li>Developing innovative solutions to analyze cosmological data.</li>
-            <li>Exploring new theories and methods to understand the universe.</li>
+            <li>Each team will start from a few data sets, and will decide what can be done with them (the opposite can also be done).</li>
+            <li>You will need to define your what, how, and why.</li>
+            <li>You will have freedom to work on your ideas.</li>
+            <li>At the end of the day, participants will present their results to the other teams.</li>
+            <li>To help you going on, we will have refreshments.</li>
         </ul>
     </section>
 
     <section>
         <h2>Data Products</h2>
-        <p>Participants will have access to:</p>
-        <ul>
-            <li>Cosmic Microwave Background (CMB) datasets.</li>
-            <li>Galaxy redshift surveys.</li>
-            <li>Gravitational wave data.</li>
-            <li>Simulations of large-scale structures in the universe.</li>
-        </ul>
+        <p>Participants will have access to several public datasets. You can also bring your own data.</p>
+        <p>Link will be shared on the day of the Hackathon.</p>
     </section>
 
     <section>
-        <h2>Our Team</h2>
+        <h2>Teams</h2>
         <ul>
-            <li><strong>Team A:</strong>
-                <ul>
-                    <li>Member 1</li>
-                    <li>Member 2</li>
-                    <li>Member 3</li>
-                </ul>
-            </li>
-            <li><strong>Team B:</strong>
-                <ul>
-                    <li>Member 1</li>
-                    <li>Member 2</li>
-                    <li>Member 3</li>
-                </ul>
-            </li>
-            <li><strong>Team C:</strong>
-                <ul>
-                    <li>Member 1</li>
-                    <li>Member 2</li>
-                    <li>Member 3</li>
-                </ul>
-            </li>
+            <li><strong>TBC</strong></li>
         </ul>
     </section>
 
