--- a/hackathon_unige_2024.html
+++ b/hackathon_unige_2024.html
@@ -117,7 +117,34 @@
     <section>
         <h2>Teams</h2>
         <ul>
-            <li><strong>TBC</strong></li>
+            <li><strong>Team A</strong>
+                <ul>
+                    <li>Francesco Crescimbeni</li>
+                    <li>Lawrence Dam</li>
+                    <li>Florian Dubath</li>
+                </ul>
+            </li>
+            <li><strong>Team B</strong>
+                <ul>
+                    <li>Julien Carron</li>
+                    <li>Anton Chudaykin</li>
+                    <li>Shengyu HE</li>
+                </ul>
+            </li>
+            <li><strong>Team C</strong>
+                <ul>
+                    <li>Manon Regamey</li>
+                    <li>Riccardo Seppi</li>
+                    <li>Marco Sorbi</li>
+                </ul>
+            </li>
+            <li><strong>Team D</strong>
+                <ul>
+                    <li>Lorenzo Bini</li>
+                    <li>Dominique Eckert</li>
+                    <li>Robert Kincaid</li>
+                </ul>
+            </li>
         </ul>
     </section>
 
