--- a/hackathon_unige_2024.html
+++ b/hackathon_unige_2024.html
@@ -45,6 +45,13 @@
             font-size: 2.2em;
         }
 
+
+        h6 {
+            text-align: center;
+            color: #ffffff; /* White text for header */
+            font-size: 1em;
+        }
+
         p {
             margin: 10px 0;
             color: #333333; /* Dark text for readability */
@@ -81,7 +88,7 @@
 <body>
     <header>
         <h1>Swiss Cosmo Hackathon 2024</h1>
-        <p><strong>Bridging data, people, and coffee.</strong></p>
+        <h6>Bridging data, people, and coffee.</h6>
     </header>
 
     <section>
